--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
             </div>
             <div class="footer-top-text">
               <p>Book Now</p>
-              <a href="tel:(406) 555-0120">(406) 555-0120</a>
+              <a href="tel: 406 555-0120">(406) 555-0120</a>
             </div>
           </div>
         </div>
