--- a/services.html
+++ b/services.html
@@ -144,7 +144,7 @@
   <!-- service section end -->
 
   <!-- service video section start -->
-  <section class="service-video-section">
+  <div class="service-video-section">
     <div class="container">
       <div class="service-video-tab">
         <div class="tab-content service-ideo-tab-content" id="myTabContent">
@@ -201,7 +201,7 @@
         </ul>
       </div>
     </div>
-  </section>
+  </div>
   <!-- service video section End -->
 
     
