--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
   <!-- service section end -->
 
   <!-- service video section start -->
-  <section class="service-video-section">
+  <div class="service-video-section">
     <div class="container">
       <div class="service-video-tab">
         <div class="tab-content service-ideo-tab-content" id="myTabContent">
@@ -373,7 +373,7 @@
         </ul>
       </div>
     </div>
-  </section>
+  </div>
   <!-- service video section End -->
 
   <!-- chose us section start -->
