--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Roofly Home</title>
+  <title>Roofly - Home</title>
   <link rel="shortcut icon" href="./assets/images/logo/fevicon.svg" type="image/x-icon">
+  <!-- bootstrap cdn -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+  <!-- slick slider cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" />
+  <!-- custom style -->
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -952,9 +954,13 @@
 
 
 
+  <!-- jquery js cdn -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <!-- bootstrap js cdn -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- slick slider js cdn -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+  <!-- custom js -->
   <script src="./assets/js/main.js"></script>
 </body>
 
