team, blog, project, contract us page added

--- a/about-us.html
+++ b/about-us.html
@@ -33,9 +33,9 @@
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./about-us.html" class="active">About</a></li>
                             <li><a href="./services.html">Services</a></li>
-                            <li><a href="#">Project</a></li>
+                            <li><a href="./project.html">Project</a></li>
                             <li><a href="#">Page</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <a href="#" class="header-btn">
@@ -200,7 +200,7 @@
                     <div class="col-md-4">
                         <div class="team-member-card">
                             <div class="team-member-img">
-                                <img src="./assets/images/img/team-member1.png" alt="img">
+                                <img src="./assets/images/img/team-member7.png" alt="img">
                                 <div class="team-social-btn">
                                     <div class="team-social-link-list">
                                         <ul class="custom-list">
@@ -258,7 +258,7 @@
                     <div class="col-md-4">
                         <div class="team-member-card">
                             <div class="team-member-img">
-                                <img src="./assets/images/img/team-member3.png" alt="img">
+                                <img src="./assets/images/img/team-member8.png" alt="img">
                                 <div class="team-social-btn">
                                     <div class="team-social-link-list">
                                         <ul class="custom-list">
@@ -447,9 +447,9 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./about-us.html" class="active">About</a></li>
                         <li><a href="./services.html">Services</a></li>
-                        <li><a href="#">Project</a></li>
+                        <li><a href="./project.html">Project</a></li>
                         <li><a href="#">Page</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <a href="#" class="back-to-top-btn"><img src="./assets/images/icons/top-arrow-white.svg" alt="icon"></a>
