--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
               <li><a href="./index.html" class="active">Home</a></li>
               <li><a href="./about-us.html" >About</a></li>
               <li><a href="./services.html">Services</a></li>
-              <li><a href="#">Project</a></li>
+              <li><a href="./project.html">Project</a></li>
               <li><a href="#">Page</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
           <a href="#" class="header-btn">
@@ -524,78 +524,116 @@
 
   <!-- recent project start -->
   <section class="recent-project-section">
-    <div class="recent-project-container">
-      <div class="recent-project-left-section">
-        <div class="recent-project-text">
-          <div class="section-title">
-            <h5 class="title"># Recent Project</h5>
-            <h2 class="sub-title">Expected A Great experience.</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="recent-project-left-section">
+            <div class="recent-project-text">
+              <div class="section-title">
+                <h5 class="title"># Recent Project</h5>
+                <h2 class="sub-title">Expected A Great experience.</h2>
+              </div>
+              <p>Our expert team assesses your property's specific needs and recommends insulation materials that align with
+                your goals..</p>
+            </div>
           </div>
-          <p>Our expert team assesses your property's specific needs and recommends insulation materials that align with
-            your goals..</p>
         </div>
-      </div>
-      <div class="recent-project-right-section">
-        <div class="recent-project-slider">
-          <div class="recent-project-slide">
-            <div class="recent-project-card">
-              <div class="project-img">
-                <img src="./assets/images/img/recent-project1.png" alt="img">
-              </div>
-              <div class="recent-project-detail">
-                <div class="recent-project-detail-inner">
-                  <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
-                  <div class="detail-text">
-                    <button class="recent-project-btn">Make Appointment</button>
-                    <h4>Boxer Modern Pattern Style</h4>
+        <div class="col-md-8">
+          <div class="recent-project-right-section">
+            <div class="recent-project-slider">
+              <div class="recent-project-slide">
+                <div class="recent-project-card">
+                  <div class="project-img">
+                    <img src="./assets/images/img/recent-project1.png" alt="img">
+                  </div>
+                  <div class="recent-project-detail">
+                    <div class="recent-project-detail-inner">
+                      <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
+                      <div class="detail-text">
+                        <button class="recent-project-btn">Make Appointment</button>
+                        <h4>Boxer Modern Pattern Style</h4>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="recent-project-slide">
-            <div class="recent-project-card">
-              <div class="project-img">
-                <img src="./assets/images/img/recent-project2.png" alt="img">
-              </div>
-              <div class="recent-project-detail">
-                <div class="recent-project-detail-inner">
-                  <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
-                  <div class="detail-text">
-                    <button class="recent-project-btn">Make Appointment</button>
-                    <h4>Boxer Modern Pattern Style</h4>
+              <div class="recent-project-slide">
+                <div class="recent-project-card">
+                  <div class="project-img">
+                    <img src="./assets/images/img/recent-project2.png" alt="img">
+                  </div>
+                  <div class="recent-project-detail">
+                    <div class="recent-project-detail-inner">
+                      <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
+                      <div class="detail-text">
+                        <button class="recent-project-btn">Make Appointment</button>
+                        <h4>Boxer Modern Pattern Style</h4>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="recent-project-slide">
-            <div class="recent-project-card">
-              <div class="project-img">
-                <img src="./assets/images/img/recent-project3.png" alt="img">
-              </div>
-              <div class="recent-project-detail">
-                <div class="recent-project-detail-inner">
-                  <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
-                  <div class="detail-text">
-                    <button class="recent-project-btn">Make Appointment</button>
-                    <h4>Boxer Modern Pattern Style</h4>
+              <div class="recent-project-slide">
+                <div class="recent-project-card">
+                  <div class="project-img">
+                    <img src="./assets/images/img/recent-project3.png" alt="img">
+                  </div>
+                  <div class="recent-project-detail">
+                    <div class="recent-project-detail-inner">
+                      <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
+                      <div class="detail-text">
+                        <button class="recent-project-btn">Make Appointment</button>
+                        <h4>Boxer Modern Pattern Style</h4>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="recent-project-slide">
-            <div class="recent-project-card">
-              <div class="project-img">
-                <img src="./assets/images/img/recent-project2.png" alt="img">
+              <div class="recent-project-slide">
+                <div class="recent-project-card">
+                  <div class="project-img">
+                    <img src="./assets/images/img/recent-project4.png" alt="img">
+                  </div>
+                  <div class="recent-project-detail">
+                    <div class="recent-project-detail-inner">
+                      <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
+                      <div class="detail-text">
+                        <button class="recent-project-btn">Make Appointment</button>
+                        <h4>Boxer Modern Pattern Style</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="recent-project-detail">
-                <div class="recent-project-detail-inner">
-                  <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
-                  <div class="detail-text">
-                    <button class="recent-project-btn">Make Appointment</button>
-                    <h4>Boxer Modern Pattern Style</h4>
+              <div class="recent-project-slide">
+                <div class="recent-project-card">
+                  <div class="project-img">
+                    <img src="./assets/images/img/recent-project5.png" alt="img">
+                  </div>
+                  <div class="recent-project-detail">
+                    <div class="recent-project-detail-inner">
+                      <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
+                      <div class="detail-text">
+                        <button class="recent-project-btn">Make Appointment</button>
+                        <h4>Boxer Modern Pattern Style</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="recent-project-slide">
+                <div class="recent-project-card">
+                  <div class="project-img">
+                    <img src="./assets/images/img/recent-project6.png" alt="img">
+                  </div>
+                  <div class="recent-project-detail">
+                    <div class="recent-project-detail-inner">
+                      <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
+                      <div class="detail-text">
+                        <button class="recent-project-btn">Make Appointment</button>
+                        <h4>Boxer Modern Pattern Style</h4>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -865,9 +903,9 @@
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="./about-us.html">About</a></li>
             <li><a href="./services.html">Services</a></li>
-            <li><a href="#">Project</a></li>
+            <li><a href="./project.html">Project</a></li>
             <li><a href="#">Page</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
         <a href="#" class="back-to-top-btn"><img src="./assets/images/icons/top-arrow-white.svg" alt="icon"></a>
