--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Roofly - Services</title>
+  <title>Roofly - Project</title>
   <link rel="shortcut icon" href="./assets/images/logo/fevicon.svg" type="image/x-icon">
   <!-- bootstrap cdn -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -31,8 +31,8 @@
             <ul class="custom-list">
               <li><a href="./index.html">Home</a></li>
               <li><a href="./about-us.html">About</a></li>
-              <li><a href="./services.html" class="active">Services</a></li>
-              <li><a href="./project.html">Project</a></li>
+              <li><a href="./services.html">Services</a></li>
+              <li><a href="./project.html" class="active">Project</a></li>
               <li><a href="#">Page</a></li>
               <li><a href="./contact.html">Contact</a></li>
             </ul>
@@ -53,13 +53,13 @@
         <div class="breadcumbs-content">
           <div class="row">
             <div class="col-md-6">
-              <h1 class="page-title">Services</h1>
-              <p class="page-detail">we are more than just a roofing company; we are your partners in protecting and
-                enhancing the integrity of your home or business. With a commitment to excellence and customer
+              <h1 class="page-title">Project</h1>
+              <p class="page-detail">we are more than just a roofing company; we are your partners in protecting and enhancing
+                the integrity of your home or business. With a commitment to excellence and customer
                 satisfaction, we offer a comprehensive range of roofing services..</p>
               <div class="breadcumbs">
                 <a href="index.html">Home</a> /
-                <a href="services.html">Services</a>
+                <a href="project.html">Project</a>
               </div>
             </div>
           </div>
@@ -69,142 +69,126 @@
   </section>
   <!-- Breadcumbs section end -->
 
-  <!-- service section start -->
-  <section class="service-section">
+  <!-- project-section start -->
+  <section class="project-section">
     <div class="container">
       <div class="section-title text-center">
-        <h5 class="title"># Services</h5>
-        <h2 class="sub-title">Awesome Roofing Solution.</h2>
+        <h5 class="title"># Recent Project</h5>
+        <h2 class="sub-title">Expected A Great experience.</h2>
       </div>
-      <div class="service-content">
+      <div class="project-content">
         <div class="row">
-          <div class="col-md-4">
-            <div class="service-card">
-              <div class="service-img">
-                <img src="./assets/images/img/services-img1.png" alt="img">
+          <div class="col-md-4 pb-4">
+            <div class="recent-project-card">
+              <div class="project-img">
+                <img src="./assets/images/img/recent-project1.png" alt="img">
               </div>
-              <div class="service-text">
-                <div class="service-icon">
-                  <div class="service-icon-inner">
-                    <img src="./assets/images/icons/service-icon.svg" alt="icon">
+              <div class="recent-project-detail">
+                <div class="recent-project-detail-inner">
+                  <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
+                  <div class="detail-text">
+                    <button class="recent-project-btn">Make Appointment</button>
+                    <h4>Boxer Modern Pattern Style</h4>
                   </div>
                 </div>
-                <h4>Roof Cleaning</h4>
-                <p>Our expert team assesses your property's
-                  specific needs and recommends insulation
-                  materials that align with your goals</p>
-                <a href="#" class="service-card-btn"><img src="./assets/images/icons/arrow-right-black.svg"
-                    alt="icon"></a>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="service-card">
-              <div class="service-img">
-                <img src="./assets/images/img/services-img2.png" alt="img">
+          <div class="col-md-4 pb-4">
+            <div class="recent-project-card">
+              <div class="project-img">
+                <img src="./assets/images/img/recent-project2.png" alt="img">
               </div>
-              <div class="service-text">
-                <div class="service-icon">
-                  <div class="service-icon-inner">
-                    <img src="./assets/images/icons/service-icon.svg" alt="icon">
+              <div class="recent-project-detail">
+                <div class="recent-project-detail-inner">
+                  <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
+                  <div class="detail-text">
+                    <button class="recent-project-btn">Make Appointment</button>
+                    <h4>Boxer Modern Pattern Style</h4>
                   </div>
                 </div>
-                <h4>Single Ply Roofing</h4>
-                <p>Our expert team assesses your property's
-                  specific needs and recommends insulation
-                  materials that align with your goals</p>
-                <a href="#" class="service-card-btn"><img src="./assets/images/icons/arrow-right-black.svg"
-                    alt="icon"></a>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="service-card">
-              <div class="service-img">
-                <img src="./assets/images/img/services-img3.png" alt="img">
+          <div class="col-md-4 pb-4">
+            <div class="recent-project-card">
+              <div class="project-img">
+                <img src="./assets/images/img/recent-project3.png" alt="img">
               </div>
-              <div class="service-text">
-                <div class="service-icon">
-                  <div class="service-icon-inner">
-                    <img src="./assets/images/icons/service-icon.svg" alt="icon">
+              <div class="recent-project-detail">
+                <div class="recent-project-detail-inner">
+                  <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
+                  <div class="detail-text">
+                    <button class="recent-project-btn">Make Appointment</button>
+                    <h4>Boxer Modern Pattern Style</h4>
                   </div>
                 </div>
-                <h4>Buildup roofing</h4>
-                <p>Our expert team assesses your property's
-                  specific needs and recommends insulation
-                  materials that align with your goals</p>
-                <a href="#" class="service-card-btn"><img src="./assets/images/icons/arrow-right-black.svg"
-                    alt="icon"></a>
               </div>
             </div>
           </div>
+          <div class="col-md-4 pb-4">
+            <div class="recent-project-card">
+              <div class="project-img">
+                <img src="./assets/images/img/recent-project4.png" alt="img">
+              </div>
+              <div class="recent-project-detail">
+                <div class="recent-project-detail-inner">
+                  <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
+                  <div class="detail-text">
+                    <button class="recent-project-btn">Make Appointment</button>
+                    <h4>Boxer Modern Pattern Style</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 pb-4">
+            <div class="recent-project-card">
+              <div class="project-img">
+                <img src="./assets/images/img/recent-project5.png" alt="img">
+              </div>
+              <div class="recent-project-detail">
+                <div class="recent-project-detail-inner">
+                  <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
+                  <div class="detail-text">
+                    <button class="recent-project-btn">Make Appointment</button>
+                    <h4>Boxer Modern Pattern Style</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 pb-4">
+            <div class="recent-project-card">
+              <div class="project-img">
+                <img src="./assets/images/img/recent-project6.png" alt="img">
+              </div>
+              <div class="recent-project-detail">
+                <div class="recent-project-detail-inner">
+                  <a href="#" class="project-play-btn"><img src="./assets/images/icons/play-btn-box.svg" alt="icon"></a>
+                  <div class="detail-text">
+                    <button class="recent-project-btn">Make Appointment</button>
+                    <h4>Boxer Modern Pattern Style</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- pagination -->
+        <div class="pagination">
+          <ul class="custom-list">
+            <li><a href="#">&#x2190;</a></li>
+            <li><a href="#" class="active">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">...</a></li>
+            <li><a href="#">&#x2192;</a></li>
+          </ul>
         </div>
       </div>
     </div>
   </section>
-  <!-- service section end -->
-
-  <!-- service video section start -->
-  <div class="service-video-section">
-    <div class="container">
-      <div class="service-video-tab">
-        <div class="tab-content service-ideo-tab-content" id="myTabContent">
-          <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
-            tabindex="0">
-            <div class="service-tab-video">
-              <video playsinline poster="./assets/images/bg/service-video-poster.png">
-                <source src="#" type="video/mp4" />
-              </video>
-              <a href="#" class="video-play-btn">
-                <img src="./assets/images/icons/video-play.svg" alt="img">
-              </a>
-            </div>
-          </div>
-          <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
-            <div class="service-tab-video">
-              <video playsinline poster="./assets/images/bg/service-video-poster.png">
-                <source src="#" type="video/mp4" />
-              </video>
-              <a href="#" class="video-play-btn">
-                <img src="./assets/images/icons/video-play.svg" alt="img">
-              </a>
-            </div>
-          </div>
-          <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
-            <div class="service-tab-video">
-              <video playsinline poster="./assets/images/bg/service-video-poster.png">
-                <source src="#" type="video/mp4" />
-              </video>
-              <a href="#" class="video-play-btn">
-                <img src="./assets/images/icons/video-play.svg" alt="img">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <ul class="nav nav-tabs service-video-tab-list" id="myTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane"
-              type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true"><img
-                src="./assets/images/icons/commercial.svg" alt="icon"> Roof Top
-              Care</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane"
-              type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false"><img
-                src="./assets/images/icons/residential.svg" alt="icon"> Residential</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane"
-              type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false"><img
-                src="./assets/images/icons/custom.svg" alt="icon"> Roof Top Care</button>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!-- service video section End -->
-
+  <!-- project-section end -->
 
 
   <!-- footer section start -->
@@ -258,10 +242,10 @@
           <ul class="custom-list">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about-us.html">About</a></li>
-            <li><a href="./services.html" class="active">Services</a></li>
-            <li><a href="#">Project</a></li>
+            <li><a href="./services.html">Services</a></li>
+            <li><a href="./project.html" class="active">Project</a></li>
             <li><a href="#">Page</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
         <a href="#" class="back-to-top-btn"><img src="./assets/images/icons/top-arrow-white.svg" alt="icon"></a>
