--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Roofly - Services</title>
+  <title>Roofly - Contact Us</title>
   <link rel="shortcut icon" href="./assets/images/logo/fevicon.svg" type="image/x-icon">
   <!-- bootstrap cdn -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -31,10 +31,10 @@
             <ul class="custom-list">
               <li><a href="./index.html">Home</a></li>
               <li><a href="./about-us.html">About</a></li>
-              <li><a href="./services.html" class="active">Services</a></li>
+              <li><a href="./services.html">Services</a></li>
               <li><a href="./project.html">Project</a></li>
               <li><a href="#">Page</a></li>
-              <li><a href="./contact.html">Contact</a></li>
+              <li><a href="./contact.html" class="active">Contact</a></li>
             </ul>
           </div>
           <a href="#" class="header-btn">
@@ -53,13 +53,13 @@
         <div class="breadcumbs-content">
           <div class="row">
             <div class="col-md-6">
-              <h1 class="page-title">Services</h1>
-              <p class="page-detail">we are more than just a roofing company; we are your partners in protecting and
-                enhancing the integrity of your home or business. With a commitment to excellence and customer
+              <h1 class="page-title">Contact Page</h1>
+              <p class="page-detail">we are more than just a roofing company; we are your partners in protecting and enhancing
+                the integrity of your home or business. With a commitment to excellence and customer
                 satisfaction, we offer a comprehensive range of roofing services..</p>
               <div class="breadcumbs">
                 <a href="index.html">Home</a> /
-                <a href="services.html">Services</a>
+                <a href="contact.html">Contact</a>
               </div>
             </div>
           </div>
@@ -69,143 +69,8 @@
   </section>
   <!-- Breadcumbs section end -->
 
-  <!-- service section start -->
-  <section class="service-section">
-    <div class="container">
-      <div class="section-title text-center">
-        <h5 class="title"># Services</h5>
-        <h2 class="sub-title">Awesome Roofing Solution.</h2>
-      </div>
-      <div class="service-content">
-        <div class="row">
-          <div class="col-md-4">
-            <div class="service-card">
-              <div class="service-img">
-                <img src="./assets/images/img/services-img1.png" alt="img">
-              </div>
-              <div class="service-text">
-                <div class="service-icon">
-                  <div class="service-icon-inner">
-                    <img src="./assets/images/icons/service-icon.svg" alt="icon">
-                  </div>
-                </div>
-                <h4>Roof Cleaning</h4>
-                <p>Our expert team assesses your property's
-                  specific needs and recommends insulation
-                  materials that align with your goals</p>
-                <a href="#" class="service-card-btn"><img src="./assets/images/icons/arrow-right-black.svg"
-                    alt="icon"></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-card">
-              <div class="service-img">
-                <img src="./assets/images/img/services-img2.png" alt="img">
-              </div>
-              <div class="service-text">
-                <div class="service-icon">
-                  <div class="service-icon-inner">
-                    <img src="./assets/images/icons/service-icon.svg" alt="icon">
-                  </div>
-                </div>
-                <h4>Single Ply Roofing</h4>
-                <p>Our expert team assesses your property's
-                  specific needs and recommends insulation
-                  materials that align with your goals</p>
-                <a href="#" class="service-card-btn"><img src="./assets/images/icons/arrow-right-black.svg"
-                    alt="icon"></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-card">
-              <div class="service-img">
-                <img src="./assets/images/img/services-img3.png" alt="img">
-              </div>
-              <div class="service-text">
-                <div class="service-icon">
-                  <div class="service-icon-inner">
-                    <img src="./assets/images/icons/service-icon.svg" alt="icon">
-                  </div>
-                </div>
-                <h4>Buildup roofing</h4>
-                <p>Our expert team assesses your property's
-                  specific needs and recommends insulation
-                  materials that align with your goals</p>
-                <a href="#" class="service-card-btn"><img src="./assets/images/icons/arrow-right-black.svg"
-                    alt="icon"></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- service section end -->
 
-  <!-- service video section start -->
-  <div class="service-video-section">
-    <div class="container">
-      <div class="service-video-tab">
-        <div class="tab-content service-ideo-tab-content" id="myTabContent">
-          <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
-            tabindex="0">
-            <div class="service-tab-video">
-              <video playsinline poster="./assets/images/bg/service-video-poster.png">
-                <source src="#" type="video/mp4" />
-              </video>
-              <a href="#" class="video-play-btn">
-                <img src="./assets/images/icons/video-play.svg" alt="img">
-              </a>
-            </div>
-          </div>
-          <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
-            <div class="service-tab-video">
-              <video playsinline poster="./assets/images/bg/service-video-poster.png">
-                <source src="#" type="video/mp4" />
-              </video>
-              <a href="#" class="video-play-btn">
-                <img src="./assets/images/icons/video-play.svg" alt="img">
-              </a>
-            </div>
-          </div>
-          <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
-            <div class="service-tab-video">
-              <video playsinline poster="./assets/images/bg/service-video-poster.png">
-                <source src="#" type="video/mp4" />
-              </video>
-              <a href="#" class="video-play-btn">
-                <img src="./assets/images/icons/video-play.svg" alt="img">
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <ul class="nav nav-tabs service-video-tab-list" id="myTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane"
-              type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true"><img
-                src="./assets/images/icons/commercial.svg" alt="icon"> Roof Top
-              Care</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane"
-              type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false"><img
-                src="./assets/images/icons/residential.svg" alt="icon"> Residential</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane"
-              type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false"><img
-                src="./assets/images/icons/custom.svg" alt="icon"> Roof Top Care</button>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!-- service video section End -->
-
-
+  
 
   <!-- footer section start -->
   <!-- footer-top-section -->
@@ -258,10 +123,10 @@
           <ul class="custom-list">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about-us.html">About</a></li>
-            <li><a href="./services.html" class="active">Services</a></li>
-            <li><a href="#">Project</a></li>
+            <li><a href="./services.html">Services</a></li>
+            <li><a href="./project.html">Project</a></li>
             <li><a href="#">Page</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html" class="active">Contact</a></li>
           </ul>
         </div>
         <a href="#" class="back-to-top-btn"><img src="./assets/images/icons/top-arrow-white.svg" alt="icon"></a>
